# ExpensesCalculatorAgenticBot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  main.py  pyproject.toml
src/bot/: config.py
src/bot/agent/: graph.py  nodes.py  prompts.py  state.py
src/bot/storage/: dynamodb.py
src/bot/tools/: expenses.py  fx.py  trip.py
tests/: conftest.py
tests/unit/storage/: test_dynamodb.py
tests/unit/tools/: test_expenses.py  test_fx.py  test_trip.py
