[project]
name = "expensescalculatoragenticbot"
version = "0.1.0"
description = "Expenses Tracking with Agentic AI in Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.23",
    "httpx>=0.28.1",
    "langchain-aws>=1.5.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb]>=1.43.27",
    "moto[dynamodb]>=5.2.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydantic[mypy]>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
    select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
files = ["src", "tests"]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
